# cmx-erp

./: Cargo.toml  README.md  lib-readme.txt  readme.txt
crates/cmx-core/: Cargo.toml
crates/cmx-core/src/: lib.rs
crates/cmx-core/src/model/: mod.rs
crates/cmx-core/src/model/book/: axis.rs  mod.rs
crates/cmx-core/src/model/book/sheet/: mod.rs
crates/cmx-core/src/model/book/sheet/area/: cell.rs  col.rs  head.rs  mod.rs  row.rs
crates/cmx-core/src/model/data/: cell.rs  mod.rs
crates/cmx-core/src/model/data/context/: mod.rs
crates/cmx-core/src/model/data/dataset/: cds.rs  col.rs  db.rs  mod.rs  rds.rs  row.rs  seaorm.rs
crates/cmx-core/src/model/data/dataset/idme_metamodel/: business_process_extensions.rs  core.rs  data_graph.rs  industrial_extensions.rs  mod.rs
crates/cmx-core/src/model/data/request/: mod.rs
crates/cmx-core/src/model/data/response/: mod.rs
crates/cmx-core/src/model/domain/: entity.rs  manager.rs  mod.rs
crates/cmx-core/src/model/meta/: dct.rs  dme.rs  fct.rs  fields.rs  mod.rs  tables.rs
crates/cmx-infra/: Cargo.toml
crates/cmx-infra/src/: lib.rs
crates/cmx-infra/src/database/: database.rs
crates/cmx-infra/src/database/postgres/: options.rs  postgres.rs
crates/cmx-infra/src/redis/: connection.rs
crates/cmx-protocol/: Cargo.toml
crates/cmx-runtime/: Cargo.toml
crates/cmx-server/: Cargo.toml
crates/cmx-server/src/: lib.rs  main.rs
crates/cmx-server/src/application/: app.rs  mod.rs  state.rs
crates/cmx-server/tests/: account_tests.rs  auth_revoke_tests.rs  transaction_tests.rs  user_tests.rs
crates/cmx-server/tests/common/: accounts.rs  error.rs  helpers.rs  test_app.rs  transactions.rs  users.rs
crates/cmx-utils/: Cargo.toml
crates/cmx-utils/src/: lib.rs
docs/: Cloud Matrix Protocol.docx
plugins/plugin-base/: Cargo.toml
plugins/plugin-demo/: Cargo.toml
sdk/cmx-cli/: Cargo.toml
sdk/cmx-pdk/: Cargo.toml
tests/wasm/wasmtest/: Cargo.toml
(+5 files in other folders)
