[package]
name = "cmx-infra"
version = "0.1.0"
edition = "2024"

[dependencies]
    cmx-utils={path = "../cmx-utils" }
    tracing = { version = "0.1", features = ["attributes"] }
    tracing-subscriber = { version = "0.3", features = ["env-filter"] }
    chrono = { version = "0.4", features = ["serde"] }
    thiserror = "2"
    redis = { version = "1", features = ["tokio-comp"] }
    sqlx = { version = "0.8", features = [
        "runtime-tokio-rustls",
        "postgres",
        "uuid",
        "macros",
        "chrono",
    ] }
